welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:5: error: value and is not a member of Boolean
    if(x < nums(i) and nums(i) > 0){
                   ^