welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.code
def indexOfMaxValue(nums:Array[Int]):Int = {
  var x = 0
  var y = 0
  for(i <- 0 to nums.length -1){
    if(x < nums(i) and nums(i) > 0){
      x = nums(i)
      y = i
    }
  }
  return y
}